<?xml version="1.0"?>
<package format="2">
  <name>tesseract_monitoring</name>
  <version>0.24.0</version>
  <description>The tesseract_monitoring package</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author >Levi Armstrong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>tesseract_environment</depend>
  <depend>tesseract_rosutils</depend>
  <depend>tesseract_msgs</depend>
  <depend>tesseract_common</depend>

  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <depend>pluginlib</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
