<?xml version="1.0"?>
<package format="2">
  <name>tesseract_planning_server</name>
  <version>0.34.0</version>
  <description>Tesseract ROS Planning Server</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author>Levi Armstrong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <depend>tesseract_monitoring</depend>
  <depend>tesseract_msgs</depend>
  <depend>tesseract</depend>
  <depend>tesseract_planning</depend>
  <depend>tesseract_rosutils</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
